renamed handler, removed deprecated config fields, swapped list.of for arrays.aslist