@@ -2,6 +2,7 @@ package com.nightwielder.apothictooltipcleanup;
 
 import net.minecraftforge.common.ForgeConfigSpec;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -24,8 +25,6 @@ public class Config {
 
     // Gem display (raw gems)
     public static final ForgeConfigSpec.ConfigValue<String> GEM_TOOLTIP_MODE;
-    public static final ForgeConfigSpec.BooleanValue COMPACT_GEM_DISPLAY;
-    public static final ForgeConfigSpec.BooleanValue HIDE_FITS_IN;
 
     // Sockets
     public static final ForgeConfigSpec.BooleanValue MERGE_EMPTY_SOCKETS;
@@ -51,13 +50,13 @@ public class Config {
                 " all = show every affix",
                 " top_n = show first N, rest visible with Alt held",
                 " alt_only = hide every affix unless Alt is held");
-        AFFIX_DISPLAY_MODE = builder.defineInList("affix_display_mode", "top_n", List.of("all", "top_n", "alt_only"));
+        AFFIX_DISPLAY_MODE = builder.defineInList("affix_display_mode", "top_n", Arrays.asList("all", "top_n", "alt_only"));
 
         builder.comment(" Number of affixes shown when mode is top_n.");
         AFFIX_VISIBLE_COUNT = builder.defineInRange("affix_visible_count", 3, 0, 99);
 
         builder.comment(" Sort order: default, rarity, alphabetical, type.");
-        AFFIX_SORT_ORDER = builder.defineInList("affix_sort_order", "default", List.of("default", "rarity", "alphabetical", "type"));
+        AFFIX_SORT_ORDER = builder.defineInList("affix_sort_order", "default", Arrays.asList("default", "rarity", "alphabetical", "type"));
 
         builder.comment(" Strips prefixes from affix names.");
         CLEAN_AFFIX_PREFIXES = builder.define("clean_affix_prefixes", false);
@@ -65,7 +64,7 @@ public class Config {
         builder.comment(" Translation key prefixes of affixes to hide.");
         HIDDEN_AFFIX_IDS = builder.defineListAllowEmpty("hidden_affix_ids", Collections.emptyList(), o -> o instanceof String);
 
-        builder.comment(" Deprecated, use affix_display_mode instead.");
+        builder.comment(" Deprecated, no longer has any effect. Use affix_display_mode instead.");
         SHIFT_TO_EXPAND = builder.define("shift_to_expand", true);
 
         builder.comment(" affix tooltip lines",
@@ -89,13 +88,7 @@ public class Config {
                 " compact = strip headers, keep per-bullet categories and bonuses",
                 " ultra = one line for categories, one line for bonuses",
                 " hidden = remove all gem info");
-        GEM_TOOLTIP_MODE = builder.defineInList("gem_tooltip_mode", "compact", List.of("full", "compact", "ultra", "hidden"));
-
-        builder.comment(" Legacy, superseded by gem_tooltip_mode.");
-        COMPACT_GEM_DISPLAY = builder.define("compact_gem_display", false);
-
-        builder.comment(" Deprecated, use gem_tooltip_mode instead.");
-        HIDE_FITS_IN = builder.define("hide_fits_in", false);
+        GEM_TOOLTIP_MODE = builder.defineInList("gem_tooltip_mode", "compact", Arrays.asList("full", "compact", "ultra", "hidden"));
 
         builder.comment(" sockets",
                 " ============================================================",
